# cyber_fine_tuning_rag

./: .env.example  .gitignore  QUALITY_REPORT.md  README.md  dataset.md  pyproject.toml  skills-lock.json
data/: README.md
modeling/: __init__.py  config.py  download.py  loader.py  smoke_test.py
preprocessing/: __init__.py  audit_quality.py  build_dataset.py  config.py  converters.py  loaders.py  quality.py  split.py
scripts/: compute_sampler_weights.py  download_datasets.sh  dump_target_modules.py
tests/: test_build_filters.py  test_converters.py  test_loaders.py  test_lora_target_resolution.py  test_quality.py  test_quant_loader.py  test_training.py
training/: __init__.py  config.py  data.py  lora_loader.py  merge_adapter.py  quant_loader.py  qwen35_train_template.jinja  train.py  weighted_trainer.py
