[project]
name = "cyber-fine-tuning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    # huggingface-hub 1.x 已無 [hf-transfer] extra；高效下載改由其內建相依 hf_xet（Xet）提供。
    "huggingface-hub>=1.16.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]

# 選用：精確 token 計數（--hf-tokenizer）。預設不安裝，需要時 `uv sync --extra tokenizer`。
[project.optional-dependencies]
tokenizer = [
    "transformers>=4.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
